# src/lib/api/model/index.ts
@@ -72,6 +72,9 @@ export * from './getStreamManifest200Type.ts';
 export * from './hideChatMessageResultDto.ts';
 export * from './legalNoticeDto.ts';
 export * from './listShowOccurrencesParams.ts';
+export * from './meDto.ts';
+export * from './meDtoClass.ts';
+export * from './meDtoRole.ts';
 export * from './meStandingDto.ts';
 export * from './moderationActionResultDto.ts';
 export * from './moderationActionResultDtoType.ts';
@@ -162,6 +165,7 @@ export * from './studioTodayShowDto.ts';
 export * from './studioTodayShowDtoStatus.ts';
 export * from './submitQueueItemDto.ts';
 export * from './submitQueueItemDtoType.ts';
+export * from './updateMeDto.ts';
 export * from './usersControllerSearchUsersClass.ts';
 export * from './usersControllerSearchUsersParams.ts';
 export * from './userSearchResultDto.ts';
